Update dependencies and gradle/AGP